--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "classnames": "^2.2.6",
     "clipboard": "^2.0.4",
     "history": "^4.10.1",
+    "mini-platform-detect": "^0.1.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.3.1",
     "preact-context": "^1.1.4",
