--- a/package.json
+++ b/package.json
@@ -98,8 +98,8 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "clipboard": "^2.0.4",
+    "detect-browser": "^5.0.0",
     "history": "^4.10.1",
-    "mini-platform-detect": "^0.1.0",
     "normalize.css": "^8.0.1",
     "preact": "^10.3.1",
     "preact-context": "^1.1.4",
