--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "preact-context": "^1.1.4",
     "preact-router": "^3.2.1",
     "qrcode": "^1.4.4",
+    "react-ga": "^2.7.0",
     "react-intl-tel-input": "^7.1.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
