chore: add global variables to eslint config

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,6 +20,9 @@
     "API_DENIM_HOST": true,
     "API_KEY": true,
     "WIDGET_HOST": true,
+    "GA_TRACKING_ID": true,
+    "TEST_BRAND": true,
+    "TEST_BODY_PART": true,
     "VERSION": true,
     "COMMITHASH": true,
     "BRANCH": true,
