--- a/.eslintrc
+++ b/.eslintrc
@@ -13,7 +13,8 @@
     "react/sort-comp": "off",
     "class-methods-use-this": "off",
     "import/prefer-default-export": 0,
-    "import/extensions": 0
+    "import/extensions": 0,
+    "no-restricted-syntax": "off"
   },
   "globals": {
     "API_HOST": true,
