--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@3dlook/camera": "2.0.7",
+    "@3dlook/camera": "^2.5.2",
     "@3dlook/saia-sdk": "^2.14.0",
     "@babel/polyfill": "^7.8.3",
     "@babel/runtime": "^7.8.4",
@@ -106,7 +106,6 @@
     "preact-context": "^1.1.4",
     "preact-router": "^3.2.1",
     "qrcode": "^1.4.4",
-    "react-ga": "^2.7.0",
     "react-intl-tel-input": "^7.1.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
