feat: node 18 update

--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "karma-webpack": "^4.0.2",
     "minami": "^1.2.3",
     "mocha": "^7.0.1",
-    "node-sass": "^4.13.1",
     "postcss-loader": "^3.0.0",
     "preact-compat-enzyme": "^0.2.5",
     "preact-test-utils": "^0.1.4",
     "puppeteer": "^2.1.1",
     "regenerator-runtime": "^0.13.3",
     "rename-output-webpack-plugin": "^1.0.1",
+    "sass": "^1.71.1",
     "sass-loader": "^8.0.2",
     "sinon": "^8.1.1",
     "standard-version": "^7.1.0",
@@ -91,7 +91,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@3dlook/camera": "^2.5.2",
+    "@3dlook/camera": "^2.6.0",
     "@3dlook/saia-sdk": "^2.14.0",
     "@babel/polyfill": "^7.8.3",
     "@babel/runtime": "^7.8.4",
@@ -100,10 +100,10 @@
     "clipboard": "^2.0.4",
     "detect-browser": "^5.0.0",
     "history": "^4.10.1",
+    "lottie-react": "^2.4.0",
     "normalize.css": "^8.0.1",
     "nosleep.js": "^0.11.0",
-    "preact": "^10.3.1",
-    "preact-context": "^1.1.4",
+    "preact": "^10.19.6",
     "preact-router": "^3.2.1",
     "qrcode": "^1.4.4",
     "react-intl-tel-input": "^7.1.0",
