--- a/package.json
+++ b/package.json
@@ -91,8 +91,9 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@3dlook-me/camera-rpv": "^1.19.0",
     "@3dlook/camera": "^2.6.0",
-    "@3dlook/saia-sdk": "^2.14.0",
+    "@3dlook/saia-sdk": "^2.17.0",
     "@babel/polyfill": "^7.8.3",
     "@babel/runtime": "^7.8.4",
     "axios": "^0.19.2",
